--- a/templates/admin/navigationpanel.html
+++ b/templates/admin/navigationpanel.html
@@ -19,11 +19,12 @@
                 <li><a href="{% url 'AdminChatView' %}" class="{% if url_name == 'AdminChatView' %}text-white{% endif %}"><i class="las la-comments"></i><span>Chat</span></a></li>
                 <li><a href="{% url 'AdminClientsView' %}" class="{% if url_name == 'AdminClientsView' %}text-white{% endif %}"><i class="las la-handshake"></i><span>Clients</span></a></li>
 <!--                <li class="menu-title"><span>Project</span></li>-->
-                <li><a href="{% url 'AdminProjectsView' %}" class="{% if url_name == 'AdminProjectsView' %}text-white{% endif %}"><i class="las la-project-diagram"></i><span>Projects</span></a></li>
+                <li><a href="{% url 'AdminProjectsView' %}" class="{% if url_name == 'AdminProjectsView' %}text-white{% endif %}"><i class="lab la-product-hunt"></i><span>Projects</span></a></li>
                 <li><a href="{% url 'AdminProjectTask' %}" class="{% if url_name == 'AdminProjectTask' %}text-white{% endif %}"><i class="las la-tasks"></i><span>Tasks</span></a></li>
 <!--                <li class="menu-title"><span>Company</span></li>-->
                 <li><a href="{% url 'AdminInterviewerDash' %}" class="{% if url_name == 'AdminInterviewerDash' %}text-white{% elif url_name == 'AdminInterviewQuestion' %}text-white{% elif url_name == 'AdminAptitudeTestResult' %}text-white{% endif %}"><i class="las la-clone"></i><span>Interviewer</span></a></li>
                 <li><a href="{% url 'AdminInterviewerForm' %}" class="{% if url_name == 'AdminInterviewerForm' %}text-white{% endif %}"><i class="lab la-wpforms"></i><span>Interviewer Form</span></a></li>
+                <li><a href="{% url 'AdminConditionsView' %}" class="{% if url_name == 'AdminConditionsView' %}text-white{% endif %}"><i class="las la-clipboard-check"></i><span>Conditions & Rules</span></a></li>
                 <li><a href="{% url 'AdminPoliciesView' %}" class="{% if url_name == 'AdminPoliciesView' %}text-white{% endif %}"><i class="las la-file-pdf"></i><span>Policies</span></a></li>
 <!--                <li><a href="{% url 'AdminDepartmentView' %}"><span>Leads</span></a></li>-->
 <!--                <li><a href="trainers.html"><span>Trainers</span></a></li>-->
