[Update] navigation panel in admin side, make dynamic values, remove static [Add] add SalarySlip model, set slip generate and store in SalarySlip table

--- a/templates/admin/attendance.html
+++ b/templates/admin/attendance.html
@@ -136,7 +136,7 @@
 											<td>{{attendee.date|date:'j - M - Y'}}</td>
 											<td>{{attendee.check_in_time|date:'h : i A'}}</td>
 											<td>{{attendee.check_out_time|date:'h : i A'}}</td>
-											<td>{{attendee.production_hour|date:'H : i A'}}</td>
+											<td>{{attendee.production_hour|date:'H : i '}} hour</td>
 											<td>{{attendee.attendee_user.phone}}</td>
 											<td>{{attendee.attendee_user.department}}</td>
 											<td class="text-center">
