--- a/templates/employee/leaves-employee.html
+++ b/templates/employee/leaves-employee.html
@@ -38,7 +38,7 @@
 										<div class="card-body">
 											<div class="d-flex justify-content-center">
 												<div>
-													<h3 class="p-1">Total Annual Leaves : <span class="text-secondary">12</span></h3>
+													<h3 class="p-1">Total Annual Leaves : <span class="text-secondary">{{total_paid_leave}}</span></h3>
 												</div>
 											</div>
 										</div>
