[update] salary slip design

--- a/templates/admin/profile.html
+++ b/templates/admin/profile.html
@@ -61,7 +61,7 @@
                                             </li>
                                             <li>
                                                 <div class="title">Email</div>
-                                                <div class="text"><a href="{{profile.email}}">{{profile.email}}</a></div>
+                                                <div class="text"><a href="mailto:{{profile.email}}">{{profile.email}}</a></div>
                                             </li>
                                             <li>
                                                 <div class="title">Birthday</div>
